--- a/stories/nn/0315_sakimas-song_slides.html
+++ b/stories/nn/0315_sakimas-song_slides.html
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/18.jpg" /></p>
-<p>I same augneblunk kom det to menn berande på ei båre. Dei hadde funne sonen til den rike mannen banka opp og forlate i vegkanten.</p>
+<p>I same augneblunk kom det to menn berande på ei båre. Dei hadde funne sonen til den rike mannen banka opp og forlaten i vegkanten.</p>
 <center>
 <strong>17</strong>
 </center>
