--- a/stories/tr/0066_nozibele-ve-üç-saç-teli_slides.html
+++ b/stories/tr/0066_nozibele-ve-üç-saç-teli_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>بھوکھا مگرمچھ - Global African Storybook</title>
+  <title>Nozibele ve üç saç teli - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="بھوکھا-مگرمچھ" class="slide level1">
-<h1>بھوکھا مگرمچھ</h1>
+<section id="nozibele-ve-üç-saç-teli" class="slide level1">
+<h1>Nozibele ve üç saç teli</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/02.jpg" /></p>
-<p>ایک دفعہ کا ذکر ہے کہ ایک بھوکھا مگرمچھ تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
+<p>Çok uzun zaman önce, üç kız arkadaş odun toplamaya gitmisler.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
-<p>اُس نے آہستہ اور خاموشی سے کھانے کی تلاش کی۔ اور پھر۔۔۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
+<p>Hava çok sıcak olduğu için dereye girip serinlemek istemişler. Suyun içinde oyunlar oynayıp yüzmüşler.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/04.jpg" /></p>
-<p>آہ! مگر مچھ نے حملہ کیا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
+<p>Sonra bir anda geç kaldıklarını farkedip köye doğru koşmaya başlamışlar.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
-<p>اس کے بعد وہ بھوکھا نہیں رہا، اب وہ خوش ہے۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
+<p>Tam köye yaklaştıklarında Nozibele elini ensesine götürmüş. Boynundaki kolyesi yerinde yokmuş! Arkadaşlarına &quot;Lütfen benimle geri dönün!&quot; diye yalvarmış. Ama onlar zaten çok kaldıklarını söylemişler.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/06.jpg" /></p>
-<p>جب تک کہ وہ دوبارہ بھوکھا نہیں ہو جاتا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
+<p>Böylece Nozibele dereye tek başına geri dönmüş. Kolyesini bulmuş ve eve doğru koşmaya başlamış. Ancak hava karardığından, yolunu kaybetmiş.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,12 +141,84 @@
 </section>
 <section class="slide level1">
 
-<h2 id="بھوکھا-مگرمچھ-1">بھوکھا مگرمچھ</h2>
-<strong>Text:</strong> Christian G.<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
+<p>Uzakta bir kulübenin ışıklarını görmüş. Hemen oraya gidip kapıyı çalmış.</p>
+<center>
+<strong>6</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
+<p>Kapıyı bir köpek açınca cok şaşırmış. &quot;Ne istiyorsun?&quot; demiş köpek. Nozibele de &quot;Evimin yolunu kaybettim, kalacak yere ihtiyacım var,&quot; demiş. Köpek &quot;İçeri gel yoksa seni ısırırım!&quot; deyince, Nozibele içeri girmiş.</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
+<p>Köpek &quot;Bana yemek pişir!&quot; demiş. &quot;Ama ben hiç bir köpeğe yemek yapmadım ki&quot; demis Nozibele. &quot;Yap yoksa ısırırım!&quot; demiş köpek. Nozibele de köpeğe biraz yemek pişirmiş.</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
+<p>Köpek sonra &quot;Yatağımı hazırla!&quot; demiş. Nozibele &quot;Ama ben hiç köpeğe yatak hazırlamadım,&quot; demiş. Köpek gene &quot;Yap yoksa ısırırım!&quot; demiş. Ve Nozibele yatağı hazırlamış.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
+<p>Böylece Nozibele hergün köpeğin yemek ve temizlik işlerini yapmaya başlamış. Sonra birgün köpek, &quot;Nozibele, bugün bir kaç arkadaşımı ziyaret edeceğim. Ben gelene kadar, evi temizle, yemek pişir ve çamaşırlarımı yıka&quot; demiş.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
+<p>Nozibele köpek gider gitmez saçından üç tel koparmış. Birini yatağın altına, birini kapının arkasına, birini de ağıla bırakmış. Sonra da olanca hızıyla evine doğru koşmaya başlamış.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
+<p>Köpek geri geldiğinde Nozibele'yi aramış. &quot;Nozibele nerdesin?&quot; diye bağırmaya başlamış. Yatağın altındaki saç &quot;Burdayım yatağın altında,&quot; demiş. Ikinci saç, &quot;Burdayım, kapının arkasında,&quot; demiş. Üçüncü saç da, &quot;Burdayım, ağılda&quot; diye seslenmiş.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
+<p>O zaman köpek Nozibele'nin kendisini kandırdığını anlamış ve hemen evden fırlayıp köye kadar koşmuş. Ancak köyde Nozibele'nin ağabeyleri, ellerinde kocaman sopalarla bekliyorlarmış. Bunu gören köpek hemen dönüp oradan hızla uzaklaşmış ve onu bir daha gören olmamış.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="nozibele-ve-üç-saç-teli-1">Nozibele ve üç saç teli</h2>
+<strong>Text:</strong> Tessa Welch<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Leyla Tekül<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/hungry-crocodile'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/nozibele-and-three-hairs'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
