--- a/stories/tr/0089_khalai-bitkilerle-konuşuyor_slides.html
+++ b/stories/tr/0089_khalai-bitkilerle-konuşuyor_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>بھوکھا مگرمچھ - Global African Storybook</title>
+  <title>Khalai bitkilerle konuşuyor - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="بھوکھا-مگرمچھ" class="slide level1">
-<h1>بھوکھا مگرمچھ</h1>
+<section id="khalai-bitkilerle-konuşuyor" class="slide level1">
+<h1>Khalai bitkilerle konuşuyor</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/02.jpg" /></p>
-<p>ایک دفعہ کا ذکر ہے کہ ایک بھوکھا مگرمچھ تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
+<p>Adı Khalai, yedi yaşında. Adının anlamı Lubukusu dilinde &quot;iyi biri&quot;.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
-<p>اُس نے آہستہ اور خاموشی سے کھانے کی تلاش کی۔ اور پھر۔۔۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
+<p>Khalai uyanıyor ve portakal ağacına sesleniyor. &quot;Lütfen portakal ağacı, iyice büyü ve bize bir çok olgun portakallar ver.&quot;</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/04.jpg" /></p>
-<p>آہ! مگر مچھ نے حملہ کیا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
+<p>Khalai okula yürüyerek gidiyor. Yolda otlara sesleniyor. &quot;Lütfen otlar, daha da yeşerin, sakın kurumayın.&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
-<p>اس کے بعد وہ بھوکھا نہیں رہا، اب وہ خوش ہے۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
+<p>Khalai kır çiçeklerinin önünden geçiyor. &quot;Çiçekler, lütfen açmaya devam edin ki sizi saçıma takabileyim.&quot;</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/06.jpg" /></p>
-<p>جب تک کہ وہ دوبارہ بھوکھا نہیں ہو جاتا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
+<p>Okulda Khalai bahçenin ortasındaki ağaca sesleniyor. &quot;Lütfen, ağaç uzun ve büyük dalların olsun ki altında, gölgende kitap okuyabilelim.&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,12 +141,39 @@
 </section>
 <section class="slide level1">
 
-<h2 id="بھوکھا-مگرمچھ-1">بھوکھا مگرمچھ</h2>
-<strong>Text:</strong> Christian G.<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
+<p>Khalai okulu çevreleyen çalılıklara sesleniyor. &quot;Lütfen büyüyüp çok kuvvetli olun ki kötü kişiler içeri giremesin.&quot;</p>
+<center>
+<strong>6</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
+<p>Khakai okuldan evine döndüğünde, portakal ağacını ziyaret ediyor. &quot;Portakalların olgunlaştı mı?&quot; diye soruyor.</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
+<p>&quot;Portakallar hala yeşil,&quot; diye iç geçiriyor Khalai. &quot;Yarın gene görüşürüz portakal ağacı&quot; diyor ve ekliyor. &quot;Belki yarın bana olgun bir portakal verebilirsin!&quot;</p>
+<center>
+<strong>8</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="khalai-bitkilerle-konuşuyor-1">Khalai bitkilerle konuşuyor</h2>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Leyla Tekül<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/hungry-crocodile'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/khalai-talks-plants'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
