--- a/stories/tr/0129_küçük-tembel-erkek-kardeş_slides.html
+++ b/stories/tr/0129_küçük-tembel-erkek-kardeş_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>بھوکھا مگرمچھ - Global African Storybook</title>
+  <title>Küçük tembel erkek kardeş - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="بھوکھا-مگرمچھ" class="slide level1">
-<h1>بھوکھا مگرمچھ</h1>
+<section id="küçük-tembel-erkek-kardeş" class="slide level1">
+<h1>Küçük tembel erkek kardeş</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/02.jpg" /></p>
-<p>ایک دفعہ کا ذکر ہے کہ ایک بھوکھا مگرمچھ تھا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/02.jpg" /></p>
+<p>Ben uyanıyorum ve ateş yakıyorum.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
-<p>اُس نے آہستہ اور خاموشی سے کھانے کی تلاش کی۔ اور پھر۔۔۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/03.jpg" /></p>
+<p>Su kaynatıyorum.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/04.jpg" /></p>
-<p>آہ! مگر مچھ نے حملہ کیا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/04.jpg" /></p>
+<p>Odun kesiyorum.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
-<p>اس کے بعد وہ بھوکھا نہیں رہا، اب وہ خوش ہے۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/05.jpg" /></p>
+<p>Kazanı karıştırıyorum.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/06.jpg" /></p>
-<p>جب تک کہ وہ دوبارہ بھوکھا نہیں ہو جاتا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/06.jpg" /></p>
+<p>Yerleri siliyorum.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,18 +141,36 @@
 </section>
 <section class="slide level1">
 
-<h2 id="بھوکھا-مگرمچھ-1">بھوکھا مگرمچھ</h2>
-<strong>Text:</strong> Christian G.<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/07.jpg" /></p>
+<p>Bulaşıkları yıkıyorum.</p>
+<center>
+<strong>6</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
+<p>Erkek kardeşim sadece oyun oynarken, ben niye bu kadar çalışıyorum?</p>
+<center>
+<strong>7</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="küçük-tembel-erkek-kardeş-1">Küçük tembel erkek kardeş</h2>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Mlungisi Dlamini<br> <strong>Translation:</strong> Leyla Tekül<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/hungry-crocodile'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/lazy-little-brother'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
 
