--- a/stories/tr/0156_aç-timsah.html
+++ b/stories/tr/0156_aç-timsah.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>بھوکھا مگرمچھ</title>
+    <title>Aç timsah</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,46 +43,46 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/01.jpg" />
 
-<h1 id="section">بھوکھا مگرمچھ</h1>
+<h1 id="a-timsah">Aç timsah</h1>
 
-Christian G.<br>اردو</div><div class="pagebreak">
+Christian G.<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/02.jpg" /></p>
 
-<p>ایک دفعہ کا ذکر ہے کہ ایک بھوکھا مگرمچھ تھا۔</p>
+<p>Bir zamanlar karnı çok aç bir timsah varmış.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
 
-<p>اُس نے آہستہ اور خاموشی سے کھانے کی تلاش کی۔ اور پھر۔۔۔</p>
+<p>Sessizce ve yavaşça yiyecek av aramış. Ve sonra aniden…</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/04.jpg" /></p>
 
-<p>آہ! مگر مچھ نے حملہ کیا۔</p>
+<p>Hooopp!!! Timsah saldırısı!</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
 
-<p>اس کے بعد وہ بھوکھا نہیں رہا، اب وہ خوش ہے۔</p>
+<p>Ve böylece artık aç değil ve çok mutlu.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/06.jpg" /></p>
 
-<p>جب تک کہ وہ دوبارہ بھوکھا نہیں ہو جاتا۔</p>
+<p>Tabii karnı tekrar acıkana kadar.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Christian G.<br /><strong>Illustrations:</strong> Wiehan de Jager<br /><strong>Translation:</strong> Samrina Sana<br /><strong>Language:</strong> Urdu</p>
+<p><strong>Text:</strong> Christian G.<br /><strong>Illustrations:</strong> Wiehan de Jager<br /><strong>Translation:</strong> Leyla Tekül<br /><strong>Language:</strong> Turkish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/hungry-crocodile">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
