--- a/stories/ur/0004_بکری،-کتا-اور-گائے.html
+++ b/stories/ur/0004_بکری،-کتا-اور-گائے.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>بکری. کتا اور گائے</title>
+    <title>بکری، کتا اور گائے</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,13 +43,13 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/01.jpg" />
 
-<h1 id="section">بکری. کتا اور گائے</h1>
+<h1 id="section">بکری، کتا اور گائے</h1>
 
 Fabian Wakholi<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
 
-<p>بکری. کتا اور گائے بہت اچھے دوست تھے۔ ایک دن وہ لوگ ٹیکسی پر سفر کرنے لکلے۔</p>
+<p>بکری، کتا اور گائے بہت اچھے دوست تھے۔ ایک دن وہ لوگ ٹیکسی پر سفر کرنے لکلے۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
