--- a/stories/ur/0004_بکری،-کتا-اور-گائے_slides.html
+++ b/stories/ur/0004_بکری،-کتا-اور-گائے_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>بکری. کتا اور گائے - Global African Storybook</title>
+  <title>بکری، کتا اور گائے - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="بکری.-کتا-اور-گائے" class="slide level1">
-<h1>بکری. کتا اور گائے</h1>
+<section id="بکری-کتا-اور-گائے" class="slide level1">
+<h1>بکری، کتا اور گائے</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
-<p>بکری. کتا اور گائے بہت اچھے دوست تھے۔ ایک دن وہ لوگ ٹیکسی پر سفر کرنے لکلے۔</p>
+<p>بکری، کتا اور گائے بہت اچھے دوست تھے۔ ایک دن وہ لوگ ٹیکسی پر سفر کرنے لکلے۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -168,7 +168,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="بکری.-کتا-اور-گائے-1">بکری. کتا اور گائے</h2>
+<h2 id="بکری-کتا-اور-گائے-1">بکری، کتا اور گائے</h2>
 <strong>Text:</strong> Fabian Wakholi<br> <strong>Illustrations:</strong> Marleen Visser<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
