--- a/stories/ur/0006_انانسی-اور-عقل.html
+++ b/stories/ur/0006_انانسی-اور-عقل.html
@@ -84,7 +84,7 @@ Ghanaian folktale<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
 
-<p>وہ زمین پر گر کر ٹکڑے ٹکڑے ہو گیا۔ اب عقل سب میں بانٹنے کے لیے آزادی تھی۔ اور اسطرح لو گوں نے پودے لگانا. کپڑے بُننا. لو ہے کے ہتھیا ر بنانا اور باقی تمام چیزیں کرنا سیکھیں۔</p>
+<p>وہ زمین پر گر کر ٹکڑے ٹکڑے ہو گیا۔ اب عقل سب میں بانٹنے کے لیے آزادی تھی۔ اور اسطرح لو گوں نے پودے لگانا، کپڑے بُننا، لو ہے کے ہتھیا ر بنانا اور باقی تمام چیزیں کرنا سیکھیں۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
