--- a/stories/ur/0089_خلائی-پودوں-سے-بات-کرتی-ہے_slides.html
+++ b/stories/ur/0089_خلائی-پودوں-سے-بات-کرتی-ہے_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>خلائی پودوں سے بات کرتی ہے - Global African Storybook</title>
+  <title>کھلائی پودوں سے بات کرتی ہے - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="خلائی-پودوں-سے-بات-کرتی-ہے" class="slide level1">
-<h1>خلائی پودوں سے بات کرتی ہے</h1>
+<section id="کھلائی-پودوں-سے-بات-کرتی-ہے" class="slide level1">
+<h1>کھلائی پودوں سے بات کرتی ہے</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
 </center>
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p>یہ خلائی ہے۔ وہ سات سال کی ہے۔ اس کی زبان لبوبیو میں اس کے نام کا مطلب ہے، 'بہت اچھا'۔</p>
+<p>یہ کھلائی ہے۔ وہ سات سال کی ہے۔ اس کی زبان لبوبیو میں اس کے نام کا مطلب ہے، 'بہت اچھا'۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p>خلائی اٹھتی ہے اور مالٹوں کے درخت سے بات کرتی ہے۔ 'براہ کرم مالٹے کے درخت، بڑے ہو جاؤ اور ہمیں بہت زیادہ مالٹے دو۔'</p>
+<p>کھلائی اٹھتی ہے اور مالٹوں کے درخت سے بات کرتی ہے۔ 'براہ کرم مالٹے کے درخت، بڑے ہو جاؤ اور ہمیں بہت زیادہ مالٹے دو۔'</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p>خلائی اسکول کی طرف چلتی ہے۔ اور راستے میں وہ گھاس سے بات کرتی ہے۔ 'براہ کرم گھاس سبز ہو جاو، اور سوکھنا مت۔'</p>
+<p>کھلائی اسکول کی طرف چلتی ہے۔ اور راستے میں وہ گھاس سے بات کرتی ہے۔ 'براہ کرم گھاس سبز ہو جاو، اور سوکھنا مت۔'</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p>خلائی جنگلی پھولوں کے پاس سے گزرتی ہے۔ 'براہ کرم پھول ترو تازہ رہو تا کہ میں تمہیں اپنے بالوں میں لگا سکوں۔'</p>
+<p>کھلائی جنگلی پھولوں کے پاس سے گزرتی ہے۔ 'براہ کرم پھول ترو تازہ رہو تا کہ میں تمہیں اپنے بالوں میں لگا سکوں۔'</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p>اسکول میں خلائی درخت کے وسط میں درخت سے بات کی۔ 'درخت برائے مہربانی، بڑے شاخیں نکالو تاکہ ہم آپ کے سایہ کے نیچے پڑھ سکیں۔'</p>
+<p>اسکول میں کھلائی درخت کے وسط میں درخت سے بات کی۔ 'درخت برائے مہربانی، بڑے شاخیں نکالو تاکہ ہم آپ کے سایہ کے نیچے پڑھ سکیں۔'</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p>خلائی اپنے اسکول کے ارد گرد جنگلے سے بات کرتی ہے۔ 'براہ کرم مضبوط ہو جاؤ اور خراب لوگوں کو آنے سے روک دو۔'</p>
+<p>کھلائی اپنے اسکول کے ارد گرد جنگلے سے بات کرتی ہے۔ 'براہ کرم مضبوط ہو جاؤ اور خراب لوگوں کو آنے سے روک دو۔'</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p>جب خلائی اسکول سے گھر واپس آتی ہے، تو وہ مالٹوں کے درخت کے پاس جاتی ہے خلائی پوچھتی ہے 'کیا تمہارے مالٹے پک گئے ا ہے؟'</p>
+<p>جب کھلائی اسکول سے گھر واپس آتی ہے، تو وہ مالٹوں کے درخت کے پاس جاتی ہے کھلائی پوچھتی ہے 'کیا تمہارے مالٹے پک گئے ا ہے؟'</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p>مالتے ابھی بھی کچے ہیں خلائی نے آہ بھری۔ میں تم سے کل ملنے آوں گی مالٹوں کے درخت خلائی نے کہا۔ شائد تٓب تمہارے پاس میرے لیے ایک رس بھرا مالٹا مو جو د ہو۔</p>
+<p>مالتے ابھی بھی کچے ہیں کھلائی نے آہ بھری۔ میں تم سے کل ملنے آوں گی مالٹوں کے درخت کھلائی نے کہا۔ شائد تٓب تمہارے پاس میرے لیے ایک رس بھرا مالٹا مو جو د ہو۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,7 +168,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="خلائی-پودوں-سے-بات-کرتی-ہے-1">خلائی پودوں سے بات کرتی ہے</h2>
+<h2 id="کھلائی-پودوں-سے-بات-کرتی-ہے-1">کھلائی پودوں سے بات کرتی ہے</h2>
 <strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Jesse Pietersen<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
