--- a/stories/nn/0315_sakimas-song.html
+++ b/stories/nn/0315_sakimas-song.html
@@ -161,7 +161,7 @@ Ursula Nafula<br>nynorsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/18.jpg" /></p>
 
-<p>I same augneblunk kom det to menn berande på ei båre. Dei hadde funne sonen til den rike mannen banka opp og forlate i vegkanten.</p>
+<p>I same augneblunk kom det to menn berande på ei båre. Dei hadde funne sonen til den rike mannen banka opp og forlaten i vegkanten.</p>
 
 <div class="pagenum">17</div>
 <p></div><div class="pagebreak"></p>
