--- a/stories/tr/0089_khalai-bitkilerle-konuşuyor.html
+++ b/stories/tr/0089_khalai-bitkilerle-konuşuyor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>کھلائی پودوں سے بات کرتی ہے</title>
+    <title>Khalai bitkilerle konuşuyor</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,67 +43,67 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/01.jpg" />
 
-<h1 id="section">کھلائی پودوں سے بات کرتی ہے</h1>
+<h1 id="khalai-bitkilerle-konuuyor">Khalai bitkilerle konuşuyor</h1>
 
-Ursula Nafula<br>اردو</div><div class="pagebreak">
+Ursula Nafula<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
 
-<p>یہ کھلائی ہے۔ وہ سات سال کی ہے۔ اس کی زبان لبوبیو میں اس کے نام کا مطلب ہے، ‘بہت اچھا’۔</p>
+<p>Adı Khalai, yedi yaşında. Adının anlamı Lubukusu dilinde “iyi biri”.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
 
-<p>کھلائی اٹھتی ہے اور مالٹوں کے درخت سے بات کرتی ہے۔ ‘براہ کرم مالٹے کے درخت، بڑے ہو جاؤ اور ہمیں بہت زیادہ مالٹے دو۔’</p>
+<p>Khalai uyanıyor ve portakal ağacına sesleniyor. “Lütfen portakal ağacı, iyice büyü ve bize bir çok olgun portakallar ver.”</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
 
-<p>کھلائی اسکول کی طرف چلتی ہے۔ اور راستے میں وہ گھاس سے بات کرتی ہے۔ ‘براہ کرم گھاس سبز ہو جاو، اور سوکھنا مت۔’</p>
+<p>Khalai okula yürüyerek gidiyor. Yolda otlara sesleniyor. “Lütfen otlar, daha da yeşerin, sakın kurumayın.”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
 
-<p>کھلائی جنگلی پھولوں کے پاس سے گزرتی ہے۔ ‘براہ کرم پھول ترو تازہ رہو تا کہ میں تمہیں اپنے بالوں میں لگا سکوں۔’</p>
+<p>Khalai kır çiçeklerinin önünden geçiyor. “Çiçekler, lütfen açmaya devam edin ki sizi saçıma takabileyim.”</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
 
-<p>اسکول میں کھلائی درخت کے وسط میں درخت سے بات کی۔ ‘درخت برائے مہربانی، بڑے شاخیں نکالو تاکہ ہم آپ کے سایہ کے نیچے پڑھ سکیں۔’</p>
+<p>Okulda Khalai bahçenin ortasındaki ağaca sesleniyor. “Lütfen, ağaç uzun ve büyük dalların olsun ki altında, gölgende kitap okuyabilelim.”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
 
-<p>کھلائی اپنے اسکول کے ارد گرد جنگلے سے بات کرتی ہے۔ ‘براہ کرم مضبوط ہو جاؤ اور خراب لوگوں کو آنے سے روک دو۔’</p>
+<p>Khalai okulu çevreleyen çalılıklara sesleniyor. “Lütfen büyüyüp çok kuvvetli olun ki kötü kişiler içeri giremesin.”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
 
-<p>جب کھلائی اسکول سے گھر واپس آتی ہے، تو وہ مالٹوں کے درخت کے پاس جاتی ہے کھلائی پوچھتی ہے ‘کیا تمہارے مالٹے پک گئے ا ہے؟’</p>
+<p>Khakai okuldan evine döndüğünde, portakal ağacını ziyaret ediyor. “Portakalların olgunlaştı mı?” diye soruyor.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
 
-<p>مالتے ابھی بھی کچے ہیں کھلائی نے آہ بھری۔ میں تم سے کل ملنے آوں گی مالٹوں کے درخت کھلائی نے کہا۔ شائد تٓب تمہارے پاس میرے لیے ایک رس بھرا مالٹا مو جو د ہو۔</p>
+<p>“Portakallar hala yeşil,” diye iç geçiriyor Khalai. “Yarın gene görüşürüz portakal ağacı” diyor ve ekliyor. “Belki yarın bana olgun bir portakal verebilirsin!”</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Ursula Nafula<br /><strong>Illustrations:</strong> Jesse Pietersen<br /><strong>Translation:</strong> Samrina Sana<br /><strong>Language:</strong> Urdu</p>
+<p><strong>Text:</strong> Ursula Nafula<br /><strong>Illustrations:</strong> Jesse Pietersen<br /><strong>Translation:</strong> Leyla Tekül<br /><strong>Language:</strong> Turkish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/khalai-talks-plants">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
