--- a/stories/ur/0006_انانسی-اور-عقل_slides.html
+++ b/stories/ur/0006_انانسی-اور-عقل_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
-<p>وہ زمین پر گر کر ٹکڑے ٹکڑے ہو گیا۔ اب عقل سب میں بانٹنے کے لیے آزادی تھی۔ اور اسطرح لو گوں نے پودے لگانا. کپڑے بُننا. لو ہے کے ہتھیا ر بنانا اور باقی تمام چیزیں کرنا سیکھیں۔</p>
+<p>وہ زمین پر گر کر ٹکڑے ٹکڑے ہو گیا۔ اب عقل سب میں بانٹنے کے لیے آزادی تھی۔ اور اسطرح لو گوں نے پودے لگانا، کپڑے بُننا، لو ہے کے ہتھیا ر بنانا اور باقی تمام چیزیں کرنا سیکھیں۔</p>
 <center>
 <strong>6</strong>
 </center>
