--- a/stories/ur/0337_موم-کے-بچے.html
+++ b/stories/ur/0337_موم-کے-بچے.html
@@ -56,7 +56,7 @@ Southern African Folktale<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
 
-<p>وہ کبھی ایک دوسرے سے نہیں لڑے۔ اُنہوں نے اپنے والدین کی مدد کی. گھر میں اور کھیت میں</p>
+<p>وہ کبھی ایک دوسرے سے نہیں لڑے۔ اُنہوں نے اپنے والدین کی مدد کی، گھر میں اور کھیت میں</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Southern African Folktale<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg" /></p>
 
-<p>اور جیسے ہی سورج چڑھا. وہ صبح کی روشنی میں گانا گاتے ہوئے اُڑ گیا۔</p>
+<p>اور جیسے ہی سورج چڑھا، وہ صبح کی روشنی میں گانا گاتے ہوئے اُڑ گیا۔</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
