--- a/stories/ur/0337_موم-کے-بچے_slides.html
+++ b/stories/ur/0337_موم-کے-بچے_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
-<p>وہ کبھی ایک دوسرے سے نہیں لڑے۔ اُنہوں نے اپنے والدین کی مدد کی. گھر میں اور کھیت میں</p>
+<p>وہ کبھی ایک دوسرے سے نہیں لڑے۔ اُنہوں نے اپنے والدین کی مدد کی، گھر میں اور کھیت میں</p>
 <center>
 <strong>2</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg" /></p>
-<p>اور جیسے ہی سورج چڑھا. وہ صبح کی روشنی میں گانا گاتے ہوئے اُڑ گیا۔</p>
+<p>اور جیسے ہی سورج چڑھا، وہ صبح کی روشنی میں گانا گاتے ہوئے اُڑ گیا۔</p>
 <center>
 <strong>11</strong>
 </center>
